Add Equipment Case tag for alchemist bags (#5956)